--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <h1 class="title">Naveen Reddy</h1>
       <p class="section__text__p2">Full Stack Developer</p>
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('./assets/resume.pdf')">
+        <button class="btn btn-color-2" onclick="window.open('resume2.pdf')">
           Download CV
         </button>
         <button class="btn btn-color-1" onclick="location.href='./#contact'">
