--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="section__text">
       <p class="section__text__p1">Hello, I'm</p>
       <h1 class="title">Naveen Reddy</h1>
-      <p class="section__text__p2">Full Stack web Developer</p>
+      <p class="section__text__p2">Full Stack Web Developer</p>
       <div class="btn-container">
         <button class="btn btn-color-2" onclick="window.open('./resume.pdf')">
           Download CV
