--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="section__text">
       <p class="section__text__p1">Hello, I'm</p>
       <h1 class="title">Naveen Reddy</h1>
-      <p class="section__text__p2">Full Stack Web Developer</p>
+      <p class="section__text__p2">Full Stack web Developer</p>
       <div class="btn-container">
         <button class="btn btn-color-2" onclick="window.open('./resume.pdf')">
           Download CV
@@ -204,6 +204,20 @@
         </div>
         <div class="details-container color-container">
           <div class="article-container">
+            <img src="https://static.vecteezy.com/system/resources/previews/000/690/792/non_2x/rock-paper-scissors-hand-icons-vector.jpg" alt="Project 1" class="project-img" />
+          </div>
+          <h2 class="experience-sub-title project-title">Rock Paper Scissor</h2>
+          <div class="btn-container">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/NaveenReddy7013/Naveen-rock-paper-scissor-game.github.io'">
+              Github
+            </button>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://naveenreddy7013.github.io/Naveen-rock-paper-scissor-game.github.io/'">
+              Live Demo
+            </button>
+          </div>
+        </div>
+        <div class="details-container color-container">
+          <div class="article-container">
             <img src="./assets/pj4.webp" alt="Project 2" class="project-img" />
           </div>
           <h2 class="experience-sub-title project-title">Tic Tac Toe</h2>
@@ -220,7 +234,7 @@
           <div class="article-container">
             <img src="./assets/pj2.png" alt="Project 3" class="project-img" />
           </div>
-          <h2 class="experience-sub-title project-title">Snakes And Ladders Game</h2>
+          <h2 class="experience-sub-title project-title">Snakes Game</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/NaveenReddy7013/Naveen-snake-ladder-game.github.io'">
               Github
@@ -234,7 +248,7 @@
           <div class="article-container">
             <img src="./assets/pj4.png" alt="Project 1" class="project-img" />
           </div>
-          <h2 class="experience-sub-title project-title">Basic Calculator</h2>
+          <h2 class="experience-sub-title project-title">Calculator</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/NaveenReddy7013/Naveen-Basic-Calculator.github.io'">
               Github
