--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@
           <div class="article-container">
             <img src="./assets/pj1.png" alt="Project 1" class="project-img" />
           </div>
-          <h2 class="experience-sub-title project-title">Online Attendence</h2>
+          <h2 class="experience-sub-title project-title">Online Attendence <pre>
+            
+          </pre></h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/NaveenReddy7013/Ece-Online-Attendence'">
               Github
