--- a/index.html
+++ b/index.html
@@ -235,13 +235,13 @@
           <div class="article-container">
             <img src="./assets/pj2.png" alt="Project 3" class="project-img" />
           </div>
-          <h2 class="experience-sub-title project-title">Snakes Game</h2>
+          <h2 class="experience-sub-title project-title">Snake Game</h2>
           <div class="btn-container">
             <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/NaveenReddy7013/Naveen-snake-ladder-game.github.io'">
               Github
             </button>
             <button class="btn btn-color-2 project-btn" onclick="location.href='https://naveenreddy7013.github.io/Naveen-snake-ladder-game.github.io/'">
-              Live Demo
+              Live Demo<pre></pre>
             </button>
           </div>
         </div>
