--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <h1 class="title">Naveen Reddy</h1>
       <p class="section__text__p2">Full Stack web Developer</p>
       <div class="btn-container">
-        <button class="btn btn-color-2" onclick="window.open('./resume.pdf')">
+        <button class="btn btn-color-2" onclick="window.open('./Naveen Reddy JAVA Developer.pdf')">
           Download CV
         </button>
         <button class="btn btn-color-1" onclick="location.href='./#contact'">
@@ -75,7 +75,7 @@
           <div class="details-container">
             <img src="./assets/experience.png" alt="Experience icon" class="icon" />
             <h3>Achivement</h3>
-            <p>Lot of confidence is gain by developing Projects<br /> self.</p>
+            <p>Secured ALL INDIA RANK in GATE COMPUTER SCIENCE<br /> self.</p>
           </div>
           <div class="details-container">
             <img src="./assets/education.png" alt="Education icon" class="icon" />
@@ -85,9 +85,7 @@
         </div>
         <div class="text-container">
           <p>
-            Hi there! I'm a passionate Full Stack Developer with a strong background in creating dynamic and responsive
-            web applications. My expertise lies in leveraging modern technologies such as TypeScript, Node.js, and
-            Next.js to build robust and scalable solutions.
+            Hi there! I'm a Aspiring Software Developer skilled in full-stack Web development including JAVA , JAVASCRIPT, SQL, HTML and CSS with hands-on experience in building scalable web applications.
           </p>
         </div>
       </div>
@@ -116,13 +114,13 @@
                 <p>Experienced</p>
               </div>
             </article>
-            <article>
+<!--             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
                 <h3>React Js </h3>
                 <p>Basic</p>
               </div>
-            </article>
+            </article> -->
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
@@ -130,13 +128,13 @@
                 <p>Experienced</p>
               </div>
             </article>
-            <article>
+<!--             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
                 <h3>TypeScript</h3>
                 <p>Basic</p>
               </div>
-            </article>
+            </article> -->
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
@@ -153,24 +151,24 @@
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
                 <h3>Structured Query Language<br>(SQL)</h3>
-                <p>Basic</p>
+                <p>Experienced</p>
               </div>
             </article>
-            <article>
+<!--             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
                 <h3>Node JS</h3>
                 <p>Intermediate</p>
               </div>
-            </article>
-            <article>
+            </article> -->
+<!--             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
                 <h3>Express JS</h3>
                 <p>Intermediate</p>
               </div>
             </article>
-            <article>
+            <article> -->
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
                 <h3>Git</h3>
@@ -195,7 +193,7 @@
           <h2 class="experience-sub-title project-title">Online Attendence <pre>
           </pre></h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/NaveenReddy7013/Ece-Online-Attendence'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://script.google.com/macros/s/AKfycbwAidQ_uXuuXMyAwVD1e_AsLZleryKE3PrLpjY6jnTNgZnu__aMkHFvL4k0Di54ScH5nw/exec'">
               Github
             </button>
             <button class="btn btn-color-2 project-btn" onclick="location.href='https://naveenreddy7013.github.io/Ece-Online-Attendence/'">
