--- a/index.html
+++ b/index.html
@@ -167,12 +167,12 @@
                 <h3>Express JS</h3>
                 <p>Intermediate</p>
               </div>
-            </article>
-            <article> -->
+            </article>-->
+            <article> 
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
-                <h3>Git</h3>
-                <p>Intermediate</p>
+                <h3>Java</h3>
+                <p>Experienced</p>
               </div>
             </article>
           </div>
