--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="details-container">
             <img src="./assets/experience.png" alt="Experience icon" class="icon" />
             <h3>Achivement</h3>
-            <p>Secured ALL INDIA RANK in GATE COMPUTER SCIENCE<br /> self.</p>
+            <p>Secured ALL INDIA RANK in GATE COMPUTER SCIENCE</p>
           </div>
           <div class="details-container">
             <img src="./assets/education.png" alt="Education icon" class="icon" />
@@ -196,7 +196,7 @@
             <button class="btn btn-color-2 project-btn" onclick="location.href='https://script.google.com/macros/s/AKfycbwAidQ_uXuuXMyAwVD1e_AsLZleryKE3PrLpjY6jnTNgZnu__aMkHFvL4k0Di54ScH5nw/exec'">
               Github
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://naveenreddy7013.github.io/Ece-Online-Attendence/'">
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://script.google.com/macros/s/AKfycbwAidQ_uXuuXMyAwVD1e_AsLZleryKE3PrLpjY6jnTNgZnu__aMkHFvL4k0Di54ScH5nw/exec'">
               Live Demo
             </button>
           </div>
